2008-10-27  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.10.9.2 pre-release.
	
2008-09-25  Edward Hervey  <edward.hervey@collabora.co.uk>

	* tests/check/gnloperation.c: (GST_START_TEST):
	Adapt test to 'fixed' behaviour of videomixer fixed by #537361

2008-07-29  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnlcomposition.c: (get_current_position),
	(object_start_changed), (object_stop_changed),
	(object_priority_changed), (object_active_changed),
	(gnl_composition_add_object), (gnl_composition_remove_object):
	When calculating current position, request it downstream since it has a
	much better chance of knowing the exact position (because of queues, ..).
	If that fails, then revert to upstream (in sources) as before.
	Also, use the current position when stop/start/active/priority child
	properties change.

2008-07-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnlcomposition.c: (gnl_composition_handle_message),
	(no_more_pads_object_cb), (update_pipeline):
	Fix race-issue when unblocking top-level pad because the update_pipeline
	method isn't atomic (the objects lock is released in the middle).
	Also ignore ERROR/WARNING coming from elements which aren't in the
	currently configured stack. This is mostly related to a big issue with
	reverse negotiation in dynamic pipelines.

2008-05-31  Edward Hervey  <edward.hervey@collabora.co.uk>

	* docs/libs/inspect/plugin-gnonlin.xml:
	Plugin info as changed (email addresses).

2008-05-31  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnlcomposition.c: (gnl_composition_init),
	(gnl_composition_finalize), (gnl_composition_handle_message),
	(update_pipeline):
	Don't use the objects_lock to protect the message handling, instead
	use a new lock (messages_lock). Avoids a stupid deadlock.

2008-05-30  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnl.c:
	* gnl/gnl.h:
	* gnl/gnlcomposition.c:
	* gnl/gnlcomposition.h:
	* gnl/gnlfilesource.c:
	* gnl/gnlfilesource.h: